--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "connect-session-sequelize": "^7.0.4",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.11.1",
     "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
