--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "per-env": "^1.0.2",
     "pg": "^8.6.0",
     "pug": "2.0.4",
-    "sequelize": "^5.22.4"
+    "sequelize": "^5.22.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
