--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start:production": "node ./bin/www"
   },
   "dependencies": {
+    "connect-pg-simple": "^6.2.1",
     "connect-session-sequelize": "^7.0.4",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
     "faker": "^5.5.3",
     "http-errors": "~1.6.3",
