--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:production": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^6.2.1",
     "connect-session-sequelize": "^7.0.4",
     "cookie-parser": "^1.4.5",
